# pycaiso

./: .gitignore  LICENSE  Pipfile  README.md  oasis.py  pyproject.toml  requirements.txt
oasis/: oasis.py
pycaiso/: __init__.py  oasis.py
tests/: test_oasis.py
